# raffer_cpplib-old

./: .travis.yml  LICENSE  README.md  test-linux.sh  test-travis.sh  test-windows.bat
cpp11/: CMakeLists.txt  build-shared.sh.bat  build-static.sh.bat  build.sh.bat  config-debug-codeblocks.bat  config-debug-mingw.bat  config-debug-unix.sh.bat  test-linux.sh
cpp11/include/raffer/: raffer.hpp
cpp11/include/raffer/finally/: finally.cpp  finally.hpp  macros.hpp
cpp11/include/raffer/nested/: nested.hpp
cpp11/include/raffer/system/: system.cpp  system.hpp
cpp11/test/boost/: CMakeLists.txt
cpp11/test/boost/raffer/finally/: finally.test.cpp
cpp11/test/boost/raffer/lang/cpp/: cpp.test.cpp
cpp11/test/boost/raffer/nested/: nested.test.cpp
cpp11/test/boost/raffer/system/: system.test.cpp
cpp11/test/boost_test/: CMakeLists.txt  build.bat  run.bat
cpp11/test/boost_test/raffer/: raffer.test.cpp
cpp14/: CMakeLists.txt  config-debug-travis.sh  test-travis.sh  test-windows.bat
cpp14/include/raffer/math/: math.hpp
cpp14/include/raffer/operators/: arithmetic_operators.hpp  comparison_operators.hpp
cpp14/test/boost/: CMakeLists.txt  run.sh.bat
cpp14/test/boost/raffer/: raffer.test.cpp
cpp14/test/boost/raffer/math/: math.test.cpp
cpp14/test/boost/raffer/math/fixed_point/: fixed_point.test.cpp
cpp14/test/boost/raffer/math/fraction/: fraction.test.cpp
cpp14/test/boost/raffer/operators/: arithmetic_operators.test.cpp  comparison_operators.test.cpp
cpp14/test/boost/raffer/overload_set/: overload_set.test.cpp
cpp14/test/finally/test1/: main.cpp
cpp14/test/math/fixed_point/: CMakeLists.txt
cpp14/test/math/fraction/: CMakeLists.txt
cpp14/test/math/test1/: math_test1.code-workspace
cpp14/test/old/test_call1/: test_call.layout
cpp14/test/old/test_color/: test_color.layout
cpp14/test/old/test_finally/: main.cpp
cpp14/test/old/test_overload_set/: main.cpp
cpp14/test/old/test_point/: main.cpp  test_point.cbp
cpp17/: CMakeLists.txt  build-shared.sh.bat  build-static.sh.bat  test-linux.sh  test-windows.bat
cpp17/include/raffer/container/: container.hpp  is_container.hpp  is_stl_container.hpp
cpp17/include/raffer/logic/: logic.hpp
cpp17/include/raffer/nested/: nested.hpp
cpp17/include/raffer/overload_set/: overload_set.hpp
cpp17/include/raffer/regex/call/: call.cpp  call.hpp  call_std.hpp
cpp17/include/raffer/switch/: switch.hpp
cpp17/include/raffer/type/: type.cpp  type.hpp
cpp17/include/raffer/type_traits/: is_container.hpp  is_stl_container.hpp  type_traits.hpp
cpp17/test/boost/: CMakeLists.txt  build-static.sh.bat
cpp17/test/boost/raffer/: raffer.test.cpp
cpp17/test/boost/raffer/container/: container.test.cpp  is_container.test.cpp  is_stl_container.test.cpp
cpp17/test/boost/raffer/logic/: logic.test.cpp
cpp17/test/boost/raffer/overload_set/: overload_set.test.cpp
cpp17/test/boost/raffer/regex/call/: call.test.cpp  call_std.test.cpp
cpp17/test/boost/raffer/switch/: switch.test.cpp
cpp17/test/boost/raffer/type/: type.test.cpp
cpp17/test/logic/: main.cpp  test_logic.code-workspace
cpp17/test/test_regex_call/: test_regex_call.depend
cpp17/test/test_regex_call/std/: all.script  logic.script
src/cpp11/: CMakeLists.txt
src/cpp11/include/raffer/: raffer.hpp
src/cpp11/include/raffer/finally/: finally.cpp  finally.hpp  macros.hpp
src/cpp11/include/raffer/lang/cpp/: cpp.hpp
src/cpp11/include/raffer/nested/: nested.hpp
src/cpp11/include/raffer/system/: system.cpp  system.hpp
src/cpp11/test/CLion/nested/: CMakeLists.txt  main.cpp
src/cpp11/test/CodeBlocks/test_raffer_cpp11/: test_lang.hpp  test_raffer_cpp11.cbp  test_raffer_cpp11.depend  test_raffer_cpp11.layout
src/cpp11/test/CodeBlocks/test_raffer_cpp11/src/: main.cpp  test_finally.hpp  test_system.hpp
src/cpp11/test/boost_test/: CMakeLists.txt  build.bat  config.bat  main.cpp  raffer.test.cpp  run.bat
src/cpp11/test/boost_test/raffer/: raffer.test.cpp
src/cpp11/test/boost_test/raffer/finally/: finally.test.hpp
src/cpp11/test/boost_test/raffer/lang/: lang.test.hpp
src/cpp11/test/boost_test/raffer/lang/cpp/: cpp.test.hpp
src/cpp11/test/boost_test/raffer/nested/: nested.test.hpp
src/cpp17/test/logic/: CMakeLists.txt  main.cpp
src/lib/: raffer.hpp
src/lib/color/: color.hpp
src/lib/finally/: finally.cpp  finally.hpp
src/lib/logic/: logic.cpp  logic.hpp
src/lib/math/: math.cpp  math.hpp
src/lib/overload_set/: overload_set.hpp
src/lib/overloaded/: overloaded.hpp
src/lib/point/: point.hpp
src/lib/switch/: switch.hpp
src/lib/system/: system.cpp  system.hpp
src/lib/type/: type.cpp  type.hpp
src/lib/type_traits/: is_stl_container.hpp  type_traits.hpp
src/test/finally/test1/: CMakeLists.txt  finally_test1.code-workspace  main.cpp
src/test/math/fraction/: CMakeLists.txt  main.cpp  math_test1.code-workspace
src/test/test_URI/: main.cpp  test_URI.cbp  test_URI.depend
src/test/test_call/: main.cpp  test_call.cbp  test_call.depend  test_call.layout
src/test/test_call1/: input.md  main.cpp  output.html  test_call.depend
src/test/test_color/: main.cpp  test_color.cbp  test_color.depend  test_color.layout
src/test/test_finally/: test_finally.depend  test_finally.layout
src/test/test_length/: main.cpp  test_length.cbp  test_length.layout
src/test/test_logic/: main.cpp  test_logic.cbp  test_logic.depend  test_logic.layout
src/test/test_math/: main.cpp  test_math.cbp  test_math.depend  test_math.layout
src/test/test_overload_set/: test_overload_set.cbp  test_overload_set.layout
src/test/test_point/: main.cpp  test_point.cbp  test_point.depend  test_point.layout
src/test/test_property/: test_property.depend  test_property.layout
src/test/test_switch/: main.cpp  test_switch.cbp  test_switch.depend  test_switch.layout
src/test/test_system/: main.cpp  test_system.cbp  test_system.depend  test_system.layout
src/test/test_type/: main.cpp  test_type.cbp  test_type.depend  test_type.layout
src/test/test_type_traits/: main.cpp  test_type_traits.cbp  test_type_traits.depend  test_type_traits.layout
(+137 files in other folders)
